# StateSystem

./: .gitignore  README.md
lib/: hash.ini  (+8 more)
lib/BaseLibrary/: BaseLibrary.sln  CMakeLists.txt  request.txt
lib/BaseLibrary/ApStateSystem/: ApStateSystem.vcxproj  BaseInterface.cpp  BaseInterface.h  StateManagerPnID.cpp  pch.h
lib/BaseLibrary/ApStateSystemIos/: ApStateSystemIos.h  ApStateSystemIos.m
lib/BaseLibrary/BaseLibrary.xcodeproj/: project.pbxproj
lib/BaseLibrary/BaseLibraryAn/: BaseLibraryAn.cpp  BaseLibraryAn.h  BaseLibraryAn.vcxproj  BaseLibraryAn.vcxproj.filters  pch.h
lib/BaseLibrary/ConsoleUnityTest/: ConsoleUnityTest.cpp  ConsoleUnityTest.vcxproj  ConsoleUnityTest.vcxproj.filters
lib/BaseLibrary/Eos/: CameraControl.cpp  CameraControl.h  DevCamera.cpp  DevCamera.h  Eos.cpp  Eos.vcxproj  Eos.vcxproj.filters
lib/BaseLibrary/Eos/Camera/: CameraController.h  CameraModel.h  Processor.h
lib/BaseLibrary/Eos/Class/: ActionSource.h
lib/BaseLibrary/PhotoSketch/: PhotoSketch.vcxproj  PhotoSketch.vcxproj.filters  SketchLib.h  pch.h
lib/BaseLibrary/PtBase/: BaseActionStack.cpp  BaseActionStack.h  BaseCircleQueue.cpp  BaseCircleQueue.h  BaseDStructure.cpp  BaseDStructure.h  BaseDefines.h  BaseEmail.cpp  BaseEmail.h  BaseEventHandler.cpp  BaseEventHandler.h  BaseEventManager.cpp  BaseEventManager.h  BaseFile.cpp  BaseFile.h  BaseHttp.cpp  BaseHttp.h  BaseJson.cpp  BaseJson.h  BaseMemoryPool.cpp  BaseMemoryPool.h  BaseMemoryPool3.cpp  BaseMemoryPool3.h  BaseNetConnector.cpp  BaseNetConnector.h  BaseObject.cpp  BaseObject.h  BaseRecognitionManager.cpp  BaseRecognitionManager.h  BaseRecognitionPrjVector.cpp  BaseRecognitionPrjVector.h  BaseResDStructure.cpp  BaseResDStructure.h  BaseResFile.cpp  BaseResFile.h  BaseResFilterIP.cpp  BaseResFilterIP.h  BaseResGrid.cpp  BaseResGrid.h  BaseResManager.cpp  (+114 more)
lib/BaseLibrary/PtExtend/: BaseSCHash.cpp  BaseSCHash.h  BaseSCHttpD.cpp  BaseSCHttpD.h  BaseSCHttpDSession.cpp  BaseSCHttpDSession.h  BaseSCJson.cpp  BaseSCJson.h  BaseStateSystem.cpp  BaseStateSystem.h  DevCamera.cpp  DevCamera.h  DevCashReader.cpp  DevCashReader.h  DevPrint.cpp  DevPrint.h  DevPrinter.cpp  DevPrinter.h  ExtendOpenCV.cpp  ExtendOpenCV.h  PhotoSketch.cpp  PhotoSketch.h  SerialPort.cpp  SerialPort.h  StateContext.cpp  StateContext.h  UdpChannelServer.cpp  UdpChannelServer.h  stdafx.h
lib/BaseLibrary/StatePython/: PythonModule.cpp  StatePython.cpp  StatePython.h  StatePython.vcxproj  StatePython.vcxproj.filters  pch.h
lib/BaseLibrary/jni/: Android.mk  Application.mk  build.bat
lib/BaseLibrary/stConsole/: BaseInterface.cpp  BaseInterface.h  StateManagerPnID.cpp  StateManagerPnID.h  languagepack_dbg.ini  pch.h  stConsole.cpp  stConsole.vcxproj  stConsole.vcxproj.filters  statesystemconfig.ini
lib/BaseLibrary/stateconsole/: main.cpp
lib/BaseLibrary/testconsole/: testconsole.cpp  testconsole.vcxproj  testconsole.vcxproj.filters
(+400 files in other folders)
